# rust-htmx-contacts-app

./: .env  .envrc  .gitignore  Cargo.toml  docker-compose.yml  flake.nix  justfile  mise.toml  rust-toolchain.toml
migrations/2024-06-23-020218_create_contacts/: up.sql
src/: api.rs  form_struct.rs  html_views.rs  hx_triggers.rs  lib.rs  main.rs  model.rs  schema.rs
