[package]
name = "hypermedia-systems-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.4", features = ["query", "macros"] }
axum-extra = { version = "0.9.2", features = ["form", "typed-routing"] }
axum-flash = "0.8.0"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tower-livereload = "0.9.1"
uuid = {version = "1.8.0", features = ["v4", "serde"]}
